--- a/part3/part3-fullstack-node/package.json
+++ b/part3/part3-fullstack-node/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "8.32.0",
     "nodemon": "2.0.20"
   },
   "dependencies": {
